# websearch-skill

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
contracts/: README.md  agent-io.schema.json  arxiv.schema.json  envelope.schema.json  extract.schema.json  fetch.schema.json  format.schema.json  github.schema.json  search.schema.json  store.schema.json
docker/searxng/: README.md  docker-compose.yml
docker/searxng/core-config/: settings.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  INSTALL.md
skills/web-search/: SKILL.md
src/websearch/: __init__.py  __main__.py  cli.py  envelope.py  errors.py
src/websearch/layer1_search/: __init__.py  canonical.py  capability.py  dedup.py  fusion.py  models.py  port.py  router.py
src/websearch/layer1_search/adapters/: __init__.py  ddgs_engine.py  searxng.py
src/websearch/layer2_extract/: __init__.py  blocks.py  egress.py  exceptions.py  fetch_router.py  models.py  pipeline.py  ports.py  quality.py
src/websearch/layer2_extract/extractors/: __init__.py  trafilatura_extractor.py
src/websearch/layer2_extract/fetchers/: __init__.py  curl_cffi_fetcher.py  httpx_fetcher.py  util.py
src/websearch/layer2_format/: __init__.py  anthropic_blocks.py  chunk.py  dedup.py  exceptions.py  format_pipeline.py  ids.py  models.py  ports.py  renderer.py  tokens.py
src/websearch/layer2_format/store/: __init__.py  _common.py  memory_bm25.py  sqlite_fts5.py
src/websearch/layer3_agentio/: __init__.py  facade.py  fence.py  mcp_server.py  models.py  pagination.py
src/websearch/tool_arxiv/: __init__.py  client.py  models.py
src/websearch/tool_github/: __init__.py  client.py  models.py
tests/: conftest.py  test_adapters.py  test_blocks.py  test_canonical.py  test_contracts.py  test_dedup.py  test_distribution.py  test_egress.py  test_engine_passthrough.py  test_extract_adapter.py  test_extract_contracts.py  test_extract_pipeline.py  test_fetch_router.py  test_fetchers.py  test_format_chunk.py  test_format_contracts.py  test_format_dedup.py  test_format_pipeline.py  test_fusion.py  test_layer1_search_e2e.py  test_layer2_extract_e2e.py  test_layer3_agentio.py  test_layer3_cli_e2e.py  test_layer3_contracts.py  test_layer3_fence.py  test_layer3_pagination.py  test_open_e2e.py  test_quality.py  test_robustness_polish.py  test_router.py  test_store.py  test_tool_arxiv.py  test_tool_github.py
