[project]
name = "websearch-skill"
version = "0.1.0"
description = "Open-source multi-engine web search + extraction SKILL and TOOL for AI agents (uv-native, contract-driven, harness-portable)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Hector Oviedo", email = "hector.ernesto.oviedo@gmail.com" }]
keywords = ["web-search", "ai-agents", "searxng", "ddgs", "mcp", "claude-skill", "rank-fusion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "ddgs>=9.0",
    # Layer 2A default closure (all permissive: Apache-2.0 + MIT/BSD/MPL deps).
    "trafilatura>=2.1",
    "curl_cffi>=0.15",
]

[project.optional-dependencies]
# Contract validation at runtime (always available in dev; optional at install).
schema = ["jsonschema>=4.21"]
# Layer 3 MCP face. The base install (CLI) needs none of this; the stdio server and the
# `websearch mcp` command import it lazily. Standalone FastMCP 3.x (not the mcp SDK's
# bundled FastMCP 1.0). Pin <4 because minor releases can carry breaking changes.
mcp = ["fastmcp>=3.4,<4"]

[project.scripts]
websearch = "websearch.cli:main"

[project.urls]
Homepage = "https://github.com/hec-ovi/websearch-skill"
Repository = "https://github.com/hec-ovi/websearch-skill"
Issues = "https://github.com/hec-ovi/websearch-skill/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "jsonschema>=4.21",
    "ruff>=0.6",
    # So CI exercises the real MCP server (tool registration + invocation), not a mock.
    "fastmcp>=3.4,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/websearch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
