[project]
name = "websearch-skill"
version = "0.1.0"
description = "Open-source multi-engine web search + extraction SKILL and TOOL for AI agents (uv-native, contract-driven, harness-portable)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Hector Oviedo", email = "hector.ernesto.oviedo@gmail.com" }]
keywords = [
    "web-search",
    "web-fetch",
    "ai-agents",
    "agent-skills",
    "searxng",
    "ddgs",
    "mcp",
    "fastmcp",
    "claude-skill",
    "rank-fusion",
    "uvx",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "ddgs>=9.0",
    # Layer 2A default closure (all permissive: Apache-2.0 + MIT/BSD/MPL deps).
    "trafilatura>=2.1",
    "curl_cffi>=0.15",
    # Layer 3 MCP face, bundled in the base install so `websearch mcp`, `uvx websearch-skill
    # mcp`, and the MCP-registry runner all start the stdio server with one command and no
    # extra. Standalone FastMCP 3.x (not the mcp SDK's bundled FastMCP 1.0); pin <4 because
    # minor releases can carry breaking changes.
    "fastmcp>=3.4,<4",
]

[project.optional-dependencies]
# Contract validation at runtime (always available in dev; optional at install).
schema = ["jsonschema>=4.21"]
# Back-compat alias only. fastmcp is now a base dependency (above), so this extra is a no-op
# kept so older install commands like `pip install 'websearch-skill[mcp]'` keep resolving.
mcp = ["fastmcp>=3.4,<4"]

[project.scripts]
# Two names for one entrypoint: `websearch` is the canonical command; `websearch-skill`
# matches the PyPI distribution name so `uvx websearch-skill <cmd>` resolves with no --from.
websearch = "websearch.cli:main"
websearch-skill = "websearch.cli:main"

[project.urls]
Homepage = "https://github.com/hec-ovi/websearch-skill"
Repository = "https://github.com/hec-ovi/websearch-skill"
Issues = "https://github.com/hec-ovi/websearch-skill/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "jsonschema>=4.21",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/websearch"]

[tool.hatch.build.targets.sdist]
# Explicit allowlist so the source distribution can never capture local-only files (for
# example a globally-gitignored .claude/settings.local.json). Only intended sources ship.
include = [
    "src/websearch",
    "tests",
    "contracts",
    "docs",
    "skills",
    "docker",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
